--- a/index.html
+++ b/index.html
@@ -14,15 +14,10 @@
     <title>Poets of tomorrow’s world</title>
   </head>
   <body>
-    <div class="reference">
-      There is a new version of this game. Click
-      <a href="https://poets-of-tomorrows-world.vercel.app/">here</a> to check
-      it.
-    </div>
     <section id="intro-container" class="container">
       <h1>Poets of tomorrow’s world</h1>
       <p>
-        In the distant future Earth's surface got toxic and the air became
+        In the near distant future Earth's surface got toxic and the air became
         polluted. In an attempt to survive humans built life-scrapers - giant
         buildings going high into the sky where it was still possible to live.
         People call them towers. Money and power are the two factors that define
