--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
-    <title>Poets of tomorrow’s world</title>
+    <title>My First Interactive Game</title>
   </head>
   <body>
     <div class="container">
