added header section, edited index title
header section links and buttons do not actually  lead to anything yet.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Poets of tomorrow’s world</title>
+    <title>My first interactive Novel</title>
   </head>
   <body>
+    <section id="header" class="hdr">
+      <a href="account.html">Account</a>
+      <button id="save">Save</button>
+      <button id="loadSave">Load Save</button>
+    </section>
     <section id="intro-container" class="container">
       <h1>My First Interactive Novel</h1>
       <form>
