--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
       </form>
       <a class="btn" href="./game.html">Start</a>
     </section>
+    <section id="footer">
+       <a href="comments.html">Comments Section</a>
+       <a href="about.html">About</a>
+       <a href="contact.html">Contact</a>
+    </section>
   </body>
 </html>
