--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
         <button class="btn">Option 3</button>
         <button class="btn">Option 4</button>
       </div>
-      <div id="option-rights" class="btn-grid">
+      <div id="optior-rights" class="btn-grid">
         <button class="btn">Right Option 1</button>
         <button class="btn">Right Option 2</button>
         <button class="btn">Right Option 3</button>
