--- a/game.html
+++ b/game.html
@@ -17,17 +17,22 @@
   <body>
     <div class="container">
       <div id="text">Text</div>
-      <div id="option-buttons" class="btn-grid">
+      <div id="option-buttons" class="btn-grid popout-menu left">
         <button class="btn">Option 1</button>
         <button class="btn">Option 2</button>
         <button class="btn">Option 3</button>
         <button class="btn">Option 4</button>
       </div>
-      <div id="optior-rights" class="btn-grid">
+      <div id="optior-rights" class="btn-grid popout-menu right">
         <button class="btn">Right Option 1</button>
         <button class="btn">Right Option 2</button>
         <button class="btn">Right Option 3</button>
         <button class="btn">Right Option 4</button>
+      </div>
+      <div class="controls">
+        <button id="toggleLeft">Toggle Left Menu</button>
+        <button id="toggleRight">Toggle Right Menu</button>
+        <button id="toggleTextContainer">Toggle Text Container</button>
       </div>
     </div>
   </body>
