--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-      <div id="text">Text</div>
+      <div id="text" class="text">Text</div>
       <div id="option-buttons" class="btn-grid popout-menu left">
         <button class="btn">Option 1</button>
         <button class="btn">Option 2</button>
