--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@
   <body>
     <div class="container">
       <div id="text" class="text">Text</div>
+    </div>
+    <div class="option-cont">
       <div id="option-buttons" class="btn-grid popout-menu left">
         <button class="btn">Option 1</button>
         <button class="btn">Option 2</button>
